parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PR_display
    Token_Single_Dig

Grammar

Rule 0     S' -> prog
Rule 1     prog -> PR_Program Token_Llave_Abierta globalVar BlockFun MainBlock Token_Llave_Cerrado
Rule 2     tipo -> PR_int
Rule 3     tipo -> PR_float
Rule 4     tipo -> PR_bool
Rule 5     tipo -> PR_void
Rule 6     tipo -> PR_rad
Rule 7     tipo -> PR_degree
Rule 8     globalVar -> PR_globalVar tipo decVar Token_Punto_Coma globalVar
Rule 9     globalVar -> empty
Rule 10    var -> PR_var tipo decVar Token_Punto_Coma
Rule 11    decVar -> varNom decVar2
Rule 12    decVar2 -> Token_Coma decVar
Rule 13    decVar2 -> empty
Rule 14    varNom -> ID arr1
Rule 15    arr1 -> Token_Corchete_Abierto Token_Entero Token_Corchete_Cerrado arr2
Rule 16    arr1 -> empty
Rule 17    arr2 -> Token_Corchete_Abierto Token_Entero Token_Corchete_Cerrado
Rule 18    arr2 -> empty
Rule 19    BlockFun -> fun BlockFun
Rule 20    BlockFun -> empty
Rule 21    fun -> PR_fun tipo ID Token_Parent_Abierto params Token_Parent_Cerrado funBlock
Rule 22    params -> tipo ID
Rule 23    params -> tipo ID Token_Coma params
Rule 24    params -> empty
Rule 25    funBlock -> Token_Llave_Abierta bloque Token_Llave_Cerrado
Rule 26    funCall -> ID Token_Parent_Abierto paramsCall Token_Parent_Cerrado
Rule 27    funCallVoid -> ID Token_Parent_Abierto paramsCall Token_Parent_Cerrado Token_Punto_Coma
Rule 28    paramsCall -> SuperExp
Rule 29    paramsCall -> SuperExp Token_Coma paramsCall
Rule 30    paramsCall -> empty
Rule 31    MainBlock -> PR_main Token_Llave_Abierta bloque Token_Llave_Cerrado
Rule 32    empty -> <empty>
Rule 33    bloque -> statements bloque
Rule 34    bloque -> empty
Rule 35    statements -> var
Rule 36    statements -> funCallVoid
Rule 37    statements -> Conditions
Rule 38    statements -> ciclos
Rule 39    statements -> asigna
Rule 40    statements -> read
Rule 41    statements -> write
Rule 42    statements -> GRAPH
Rule 43    statements -> map
Rule 44    statements -> NORMALIZAR
Rule 45    SuperExp -> Exp
Rule 46    SuperExp -> Exp PR_and CuadruploOpp SuperExp
Rule 47    SuperExp -> Exp PR_or CuadruploOpp SuperExp
Rule 48    SuperExp -> Exp Token_And CuadruploOpp SuperExp
Rule 49    SuperExp -> Exp Token_Or CuadruploOpp SuperExp
Rule 50    Exp -> miniExp
Rule 51    Exp -> miniExp TOKEN_MAYOR CuadruploOpp miniExp
Rule 52    Exp -> miniExp TOKEN_MENOR CuadruploOpp miniExp
Rule 53    Exp -> miniExp TOKEN_MAYOR_IG CuadruploOpp miniExp
Rule 54    Exp -> miniExp TOKEN_MENOR_IG CuadruploOpp miniExp
Rule 55    Exp -> miniExp TOKEN_COMPARA CuadruploOpp miniExp
Rule 56    Exp -> miniExp TOKEN_NO_IGUAL CuadruploOpp miniExp
Rule 57    miniExp -> microExp CuadruplosCrea
Rule 58    miniExp -> microExp CuadruplosCrea Token_SUMA CuadruploOpp miniExp
Rule 59    miniExp -> microExp CuadruplosCrea Token_Resta CuadruploOpp miniExp
Rule 60    microExp -> minimicroExp CuadruplosCreaMult
Rule 61    microExp -> minimicroExp CuadruplosCreaMult TOKEN_MULTI CuadruploOpp microExp
Rule 62    microExp -> minimicroExp CuadruplosCreaMult TOKEN_DIVID CuadruploOpp microExp
Rule 63    minimicroExp -> conjunto CuadruplosCreaPow
Rule 64    minimicroExp -> conjunto CuadruplosCreaPow TOKEN_POW CuadruploOpp minimicroExp
Rule 65    conjunto -> ID CuadruploMiniExp
Rule 66    conjunto -> ID Token_Corchete_Abierto miniExp Token_Corchete_Cerrado
Rule 67    conjunto -> ID Token_Corchete_Abierto miniExp Token_Corchete_Cerrado Token_Corchete_Abierto miniExp Token_Corchete_Cerrado
Rule 68    conjunto -> Token_Entero CuadruploMiniExp
Rule 69    conjunto -> Token_Float CuadruploMiniExp
Rule 70    conjunto -> PR_true
Rule 71    conjunto -> PR_false
Rule 72    conjunto -> funCall
Rule 73    conjunto -> llamada
Rule 74    CuadruploMiniExp -> empty
Rule 75    CuadruploOpp -> empty
Rule 76    CuadruplosCrea -> empty
Rule 77    CuadruplosCreaMult -> empty
Rule 78    CuadruplosCreaPow -> empty
Rule 79    Conditions -> PR_if Token_Parent_Abierto SuperExp Token_Parent_Cerrado Token_Llave_Abierta bloque Token_Llave_Cerrado PR_else Token_Llave_Abierta bloque Token_Llave_Cerrado
Rule 80    ciclos -> PR_while Token_Parent_Abierto SuperExp Token_Parent_Cerrado Token_Llave_Abierta bloque Token_Llave_Cerrado
Rule 81    asigna -> ID TOKEN_ASIGNA SuperExp Token_Punto_Coma
Rule 82    asigna -> ID Token_Corchete_Abierto miniExp Token_Corchete_Cerrado TOKEN_ASIGNA SuperExp Token_Punto_Coma
Rule 83    asigna -> ID Token_Corchete_Abierto miniExp Token_Corchete_Cerrado Token_Corchete_Abierto miniExp Token_Corchete_Cerrado TOKEN_ASIGNA SuperExp Token_Punto_Coma
Rule 84    llamada -> sin
Rule 85    llamada -> cos
Rule 86    llamada -> tan
Rule 87    llamada -> COTANGENT
Rule 88    llamada -> COSECANT
Rule 89    llamada -> SECANT
Rule 90    llamada -> sininv
Rule 91    llamada -> cosinv
Rule 92    llamada -> taninv
Rule 93    sin -> PR_sin Token_Parent_Abierto SuperExp Token_Parent_Cerrado
Rule 94    cos -> PR_cos Token_Parent_Abierto SuperExp Token_Parent_Cerrado
Rule 95    tan -> PR_tan Token_Parent_Abierto SuperExp Token_Parent_Cerrado
Rule 96    COTANGENT -> PR_cotengent Token_Parent_Abierto SuperExp Token_Parent_Cerrado
Rule 97    COSECANT -> PR_cossecat Token_Parent_Abierto SuperExp Token_Parent_Cerrado
Rule 98    SECANT -> PR_secant Token_Parent_Abierto SuperExp Token_Parent_Cerrado
Rule 99    sininv -> PR_seninv Token_Parent_Abierto SuperExp Token_Parent_Cerrado
Rule 100   cosinv -> PR_cosinv Token_Parent_Abierto SuperExp Token_Parent_Cerrado
Rule 101   taninv -> PR_taninv Token_Parent_Abierto SuperExp Token_Parent_Cerrado
Rule 102   write -> PR_Write Token_Parent_Abierto ID Token_Parent_Cerrado Token_Punto_Coma
Rule 103   write -> PR_Write Token_Parent_Abierto ID Token_Corchete_Abierto SuperExp Token_Corchete_Cerrado Token_Parent_Cerrado Token_Punto_Coma
Rule 104   write -> PR_Write Token_Parent_Abierto ID Token_Corchete_Abierto miniExp Token_Corchete_Cerrado Token_Corchete_Abierto miniExp Token_Corchete_Cerrado Token_Parent_Cerrado Token_Punto_Coma
Rule 105   read -> PR_read Token_Parent_Abierto SuperExp Token_Parent_Cerrado Token_Punto_Coma
Rule 106   GRAPH -> PR_graph Token_Parent_Abierto SuperExp Token_Parent_Cerrado Token_Punto_Coma
Rule 107   NORMALIZAR -> PR_normalizar Token_Parent_Abierto SuperExp Token_Parent_Cerrado Token_Punto_Coma
Rule 108   map -> PR_mapmat Token_Parent_Abierto SuperExp Token_Parent_Cerrado Token_Punto_Coma

Terminals, with rules where they appear

ID                   : 14 21 22 23 26 27 65 66 67 81 82 83 102 103 104
PR_Program           : 1
PR_Write             : 102 103 104
PR_and               : 46
PR_bool              : 4
PR_cos               : 94
PR_cosinv            : 100
PR_cossecat          : 97
PR_cotengent         : 96
PR_degree            : 7
PR_display           : 
PR_else              : 79
PR_false             : 71
PR_float             : 3
PR_fun               : 21
PR_globalVar         : 8
PR_graph             : 106
PR_if                : 79
PR_int               : 2
PR_main              : 31
PR_mapmat            : 108
PR_normalizar        : 107
PR_or                : 47
PR_rad               : 6
PR_read              : 105
PR_secant            : 98
PR_seninv            : 99
PR_sin               : 93
PR_tan               : 95
PR_taninv            : 101
PR_true              : 70
PR_var               : 10
PR_void              : 5
PR_while             : 80
TOKEN_ASIGNA         : 81 82 83
TOKEN_COMPARA        : 55
TOKEN_DIVID          : 62
TOKEN_MAYOR          : 51
TOKEN_MAYOR_IG       : 53
TOKEN_MENOR          : 52
TOKEN_MENOR_IG       : 54
TOKEN_MULTI          : 61
TOKEN_NO_IGUAL       : 56
TOKEN_POW            : 64
Token_And            : 48
Token_Coma           : 12 23 29
Token_Corchete_Abierto : 15 17 66 67 67 82 83 83 103 104 104
Token_Corchete_Cerrado : 15 17 66 67 67 82 83 83 103 104 104
Token_Entero         : 15 17 68
Token_Float          : 69
Token_Llave_Abierta  : 1 25 31 79 79 80
Token_Llave_Cerrado  : 1 25 31 79 79 80
Token_Or             : 49
Token_Parent_Abierto : 21 26 27 79 80 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
Token_Parent_Cerrado : 21 26 27 79 80 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
Token_Punto_Coma     : 8 10 27 81 82 83 102 103 104 105 106 107 108
Token_Resta          : 59
Token_SUMA           : 58
Token_Single_Dig     : 
error                : 

Nonterminals, with rules where they appear

BlockFun             : 1 19
COSECANT             : 88
COTANGENT            : 87
Conditions           : 37
CuadruploMiniExp     : 65 68 69
CuadruploOpp         : 46 47 48 49 51 52 53 54 55 56 58 59 61 62 64
CuadruplosCrea       : 57 58 59
CuadruplosCreaMult   : 60 61 62
CuadruplosCreaPow    : 63 64
Exp                  : 45 46 47 48 49
GRAPH                : 42
MainBlock            : 1
NORMALIZAR           : 44
SECANT               : 89
SuperExp             : 28 29 46 47 48 49 79 80 81 82 83 93 94 95 96 97 98 99 100 101 103 105 106 107 108
arr1                 : 14
arr2                 : 15
asigna               : 39
bloque               : 25 31 33 79 79 80
ciclos               : 38
conjunto             : 63 64
cos                  : 85
cosinv               : 91
decVar               : 8 10 12
decVar2              : 11
empty                : 9 13 16 18 20 24 30 34 74 75 76 77 78
fun                  : 19
funBlock             : 21
funCall              : 72
funCallVoid          : 36
globalVar            : 1 8
llamada              : 73
map                  : 43
microExp             : 57 58 59 61 62
miniExp              : 50 51 51 52 52 53 53 54 54 55 55 56 56 58 59 66 67 67 82 83 83 104 104
minimicroExp         : 60 61 62 64
params               : 21 23
paramsCall           : 26 27 29
prog                 : 0
read                 : 40
sin                  : 84
sininv               : 90
statements           : 33
tan                  : 86
taninv               : 92
tipo                 : 8 10 21 22 23
var                  : 35
varNom               : 11
write                : 41

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . PR_Program Token_Llave_Abierta globalVar BlockFun MainBlock Token_Llave_Cerrado

    PR_Program      shift and go to state 2

    prog                           shift and go to state 1

state 1

    (0) S' -> prog .



state 2

    (1) prog -> PR_Program . Token_Llave_Abierta globalVar BlockFun MainBlock Token_Llave_Cerrado

    Token_Llave_Abierta shift and go to state 3


state 3

    (1) prog -> PR_Program Token_Llave_Abierta . globalVar BlockFun MainBlock Token_Llave_Cerrado
    (8) globalVar -> . PR_globalVar tipo decVar Token_Punto_Coma globalVar
    (9) globalVar -> . empty
    (32) empty -> .

    PR_globalVar    shift and go to state 5
    PR_fun          reduce using rule 32 (empty -> .)
    PR_main         reduce using rule 32 (empty -> .)

    globalVar                      shift and go to state 4
    empty                          shift and go to state 6

state 4

    (1) prog -> PR_Program Token_Llave_Abierta globalVar . BlockFun MainBlock Token_Llave_Cerrado
    (19) BlockFun -> . fun BlockFun
    (20) BlockFun -> . empty
    (21) fun -> . PR_fun tipo ID Token_Parent_Abierto params Token_Parent_Cerrado funBlock
    (32) empty -> .

    PR_fun          shift and go to state 10
    PR_main         reduce using rule 32 (empty -> .)

    BlockFun                       shift and go to state 7
    fun                            shift and go to state 8
    empty                          shift and go to state 9

state 5

    (8) globalVar -> PR_globalVar . tipo decVar Token_Punto_Coma globalVar
    (2) tipo -> . PR_int
    (3) tipo -> . PR_float
    (4) tipo -> . PR_bool
    (5) tipo -> . PR_void
    (6) tipo -> . PR_rad
    (7) tipo -> . PR_degree

    PR_int          shift and go to state 12
    PR_float        shift and go to state 13
    PR_bool         shift and go to state 14
    PR_void         shift and go to state 15
    PR_rad          shift and go to state 16
    PR_degree       shift and go to state 17

    tipo                           shift and go to state 11

state 6

    (9) globalVar -> empty .

    PR_fun          reduce using rule 9 (globalVar -> empty .)
    PR_main         reduce using rule 9 (globalVar -> empty .)


state 7

    (1) prog -> PR_Program Token_Llave_Abierta globalVar BlockFun . MainBlock Token_Llave_Cerrado
    (31) MainBlock -> . PR_main Token_Llave_Abierta bloque Token_Llave_Cerrado

    PR_main         shift and go to state 19

    MainBlock                      shift and go to state 18

state 8

    (19) BlockFun -> fun . BlockFun
    (19) BlockFun -> . fun BlockFun
    (20) BlockFun -> . empty
    (21) fun -> . PR_fun tipo ID Token_Parent_Abierto params Token_Parent_Cerrado funBlock
    (32) empty -> .

    PR_fun          shift and go to state 10
    PR_main         reduce using rule 32 (empty -> .)

    fun                            shift and go to state 8
    BlockFun                       shift and go to state 20
    empty                          shift and go to state 9

state 9

    (20) BlockFun -> empty .

    PR_main         reduce using rule 20 (BlockFun -> empty .)


state 10

    (21) fun -> PR_fun . tipo ID Token_Parent_Abierto params Token_Parent_Cerrado funBlock
    (2) tipo -> . PR_int
    (3) tipo -> . PR_float
    (4) tipo -> . PR_bool
    (5) tipo -> . PR_void
    (6) tipo -> . PR_rad
    (7) tipo -> . PR_degree

    PR_int          shift and go to state 12
    PR_float        shift and go to state 13
    PR_bool         shift and go to state 14
    PR_void         shift and go to state 15
    PR_rad          shift and go to state 16
    PR_degree       shift and go to state 17

    tipo                           shift and go to state 21

state 11

    (8) globalVar -> PR_globalVar tipo . decVar Token_Punto_Coma globalVar
    (11) decVar -> . varNom decVar2
    (14) varNom -> . ID arr1

    ID              shift and go to state 24

    decVar                         shift and go to state 22
    varNom                         shift and go to state 23

state 12

    (2) tipo -> PR_int .

    ID              reduce using rule 2 (tipo -> PR_int .)


state 13

    (3) tipo -> PR_float .

    ID              reduce using rule 3 (tipo -> PR_float .)


state 14

    (4) tipo -> PR_bool .

    ID              reduce using rule 4 (tipo -> PR_bool .)


state 15

    (5) tipo -> PR_void .

    ID              reduce using rule 5 (tipo -> PR_void .)


state 16

    (6) tipo -> PR_rad .

    ID              reduce using rule 6 (tipo -> PR_rad .)


state 17

    (7) tipo -> PR_degree .

    ID              reduce using rule 7 (tipo -> PR_degree .)


state 18

    (1) prog -> PR_Program Token_Llave_Abierta globalVar BlockFun MainBlock . Token_Llave_Cerrado

    Token_Llave_Cerrado shift and go to state 25


state 19

    (31) MainBlock -> PR_main . Token_Llave_Abierta bloque Token_Llave_Cerrado

    Token_Llave_Abierta shift and go to state 26


state 20

    (19) BlockFun -> fun BlockFun .

    PR_main         reduce using rule 19 (BlockFun -> fun BlockFun .)


state 21

    (21) fun -> PR_fun tipo . ID Token_Parent_Abierto params Token_Parent_Cerrado funBlock

    ID              shift and go to state 27


state 22

    (8) globalVar -> PR_globalVar tipo decVar . Token_Punto_Coma globalVar

    Token_Punto_Coma shift and go to state 28


state 23

    (11) decVar -> varNom . decVar2
    (12) decVar2 -> . Token_Coma decVar
    (13) decVar2 -> . empty
    (32) empty -> .

    Token_Coma      shift and go to state 30
    Token_Punto_Coma reduce using rule 32 (empty -> .)

    decVar2                        shift and go to state 29
    empty                          shift and go to state 31

state 24

    (14) varNom -> ID . arr1
    (15) arr1 -> . Token_Corchete_Abierto Token_Entero Token_Corchete_Cerrado arr2
    (16) arr1 -> . empty
    (32) empty -> .

    Token_Corchete_Abierto shift and go to state 33
    Token_Coma      reduce using rule 32 (empty -> .)
    Token_Punto_Coma reduce using rule 32 (empty -> .)

    arr1                           shift and go to state 32
    empty                          shift and go to state 34

state 25

    (1) prog -> PR_Program Token_Llave_Abierta globalVar BlockFun MainBlock Token_Llave_Cerrado .

    $end            reduce using rule 1 (prog -> PR_Program Token_Llave_Abierta globalVar BlockFun MainBlock Token_Llave_Cerrado .)


state 26
